# Pastebin

./: .gitignore  CMakeLists.txt  README.md
data/: 16480.txt  32498.txt  56508.txt  92327.txt
src/: main.cpp
